--- a/css/filters.css
+++ b/css/filters.css
@@ -2,7 +2,7 @@
     position: relative;
 }
 
-.filter::before {
+.filter::before, .filter::after {
     position: absolute;
     content: '';
     height: 100%;
@@ -25,24 +25,26 @@
     filter: sepia(0.3) contrast(1.1) brightness(1.1) grayscale(1);
 }
 
-/* .filter--amaro:hover::before {
-    position: absolute;
-    content: '';
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    display: block;
-    z-index: 1;
-    background-color: rgba(254, 247, 217, 0.5);
-    mix-blend-mode: soft-light;
+.filter--amaro:hover img {
+    -webkit-filter: url(../assets/filter-amaro.svg#duotone);
+    filter: url("../assets/filter-amaro.svg#duotone");
 }
+
+.filter--amaro:hover::before {
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.1), rgba(255, 255, 102, 0.3) 65%, rgba(0, 0, 0, 0.1));
+    mix-blend-mode: overlay;
+    opacity: 0.5;
+}
+
+.filter--amaro:hover::after {
+    background: radial-gradient(circle at center, transparent 60%, rgba(51, 0, 102, 0.8));
+    filter: contrast(1.4);
+    mix-blend-mode: multiply;
+    opacity: 0.8;
+}
+
 
 .filter--amaro:hover {
     -webkit-filter: brightness(1.4) contrast(1.12);
-} */
-
-.filter--amaro:hover img {
-    -webkit-filter: url(../assets/filter-yellow.svg#duotone);
-    filter: url("../assets/filter-yellow.svg#duotone");
+    filter: brightness(1.4) contrast(1.12);
 }
