--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ figcaption {
     position: absolute;
 }
 
-figure {
+figure, img {
     -webkit-transition: all cubic-bezier(0.2, 0.3, 0.25, 0.9) 0.3s;
     transition: all cubic-bezier(0.2, 0.3, 0.25, 0.9) 0.3s;
 }
