--- a/css/filters.css
+++ b/css/filters.css
@@ -100,3 +100,26 @@
     mix-blend-mode: screen;
     opacity: 0.4;
 }
+
+/* 1977 */
+
+.filter--1977 {
+    -webkit-filter: brightness(1.3) contrast(1.1) saturate(1.4);
+    filter: brightness(1.3) contrast(1.1) saturate(1.4);
+}
+
+.filter--1977 img {
+
+}
+
+.filter--1977::before {
+    background: rgba(103, 57, 76, 1);
+    mix-blend-mode: screen;
+}
+
+.filter--1977::after {
+    background: -webkit-linear-gradient(bottom, rgb(76, 55, 52), transparent);
+    background: linear-gradient(to top, rgb(76, 55, 52), transparent);
+    mix-blend-mode: overlay;
+    opacity: 0.75;
+}
