--- a/css/filters.css
+++ b/css/filters.css
@@ -199,6 +199,23 @@
     opacity: 0.8;
 }
 
+/* VALENCIA */ 
+
+.filter--valencia {
+    filter: contrast(0.9) saturate(85%);
+}
+
+.filter--valencia::before {
+    background: #A8658D;
+    mix-blend-mode: overlay;
+    opacity: 0.7;
+}
+
+.filter--valencia::after {
+    background: radial-gradient(circle, rgba(245, 225, 109, 0.8), rgba(222, 211, 138, 0.6), rgba(93, 71, 98, 0.6) 90%);
+    mix-blend-mode: overlay;
+    opacity: 0.8;
+}
 /* X PRO II */
 
 .filter--xproii {
