--- a/css/filters.css
+++ b/css/filters.css
@@ -184,16 +184,19 @@
 /* SIERRA */
 
 .filter--sierra {
+    -webkit-filter: brightness(0.9) contrast(0.9) saturate(90%);
     filter: brightness(0.9) contrast(0.9) saturate(90%);
 }
 
 .filter--sierra::before {
+    background: -webkit-radial-gradient(circle, rgba(246, 219, 164, 0.7), #221451 80%);
     background: radial-gradient(circle, rgba(246, 219, 164, 0.7), #221451 80%);
     mix-blend-mode: soft-light;
     opacity: 0.6;
 }
 
 .filter--sierra::after {
+    background: -webkit-radial-gradient(circle, rgba(247, 183, 164, 0.8) 35%, rgba(229, 236, 181, 0.6), rgba(133, 125, 122, 0.5) 80%);
     background: radial-gradient(circle, rgba(247, 183, 164, 0.8) 35%, rgba(229, 236, 181, 0.6), rgba(133, 125, 122, 0.5) 80%);
     mix-blend-mode: overlay;
     opacity: 0.8;
@@ -202,6 +205,7 @@
 /* VALENCIA */ 
 
 .filter--valencia {
+    -webkit-filter: contrast(0.9) saturate(85%);
     filter: contrast(0.9) saturate(85%);
 }
 
@@ -212,6 +216,7 @@
 }
 
 .filter--valencia::after {
+    background: -webkit-radial-gradient(circle, rgba(245, 225, 109, 0.8), rgba(222, 211, 138, 0.6), rgba(93, 71, 98, 0.6) 90%);
     background: radial-gradient(circle, rgba(245, 225, 109, 0.8), rgba(222, 211, 138, 0.6), rgba(93, 71, 98, 0.6) 90%);
     mix-blend-mode: overlay;
     opacity: 0.8;
@@ -224,6 +229,7 @@
 }
 
 .filter--xproii::before {
+    background: -webkit-radial-gradient(circle, transparent 35%, #11116F 90%);
     background: radial-gradient(circle, transparent 35%, #11116F 90%);
     mix-blend-mode: multiply;
     opacity: 0.5;
@@ -251,9 +257,30 @@
 }
 
 .filter--rise::after {
-    /* background: -webkit-radial-gradient(circle, rgba(246, 157, 60, 0.8), transparent 100%); */
+    background: -webkit-radial-gradient(circle, rgba(232, 197, 152, 0.8), transparent 100%);
     background: radial-gradient(circle, rgba(232, 197, 152, 0.8), transparent 100%);
     mix-blend-mode: overlay;
     opacity: 0.6;
+}
+
+/* SUTRO */
+
+.filter--sutro {
+    -webkit-filter: contrast(1.1) sepia(0.3);
+    filter: contrast(1.1) sepia(0.3);
+}
+
+.filter--sutro::before {
+    background: -webkit-radial-gradient(circle, rgba(249, 215, 147, 0.8), rgba(86, 43, 115, 0.7), rgba(23, 5, 53, 0.7) 60%);
+    background: radial-gradient(circle, rgba(249, 215, 147, 0.8), rgba(86, 43, 115, 0.7), rgba(23, 5, 53, 0.7) 60%);
+    mix-blend-mode: overlay;
+    opacity: 0.7;
+}
+
+.filter--sutro::after {
+    background: -webkit-radial-gradient(40% 40%, circle, rgba(215, 186, 235, 0.6), rgba(47, 32, 57, 0.8));
+    background: radial-gradient(circle at 40% 40%, rgba(215, 186, 235, 0.6), rgba(47, 32, 57, 0.8));
+    mix-blend-mode: color-burn;
+    opacity: 0.4;
 }
 
