--- a/css/filters.css
+++ b/css/filters.css
@@ -30,28 +30,19 @@
 
 /* AMARO */
 
-.filter--amaro img {
-    -webkit-filter: url(../assets/filters.svg#amaro);
-    filter: url("../assets/filters.svg#amaro");
+.filter--amaro {
+    -webkit-filter: brightness(.9) sepia(.1) contrast(1.4);
+    filter: saturate(.85) contrast(.9);
 }
 
 .filter--amaro::before {
-    background: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.1), rgba(255, 255, 102, 0.3) 65%, rgba(0, 0, 0, 0.1));
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.1), rgba(255, 255, 102, 0.3) 65%, rgba(0, 0, 0, 0.1));
-    mix-blend-mode: overlay;
-    opacity: 0.7;
+    background: radial-gradient(circle, rgba(49, 10, 82, .65) 5%, rgba(118, 157, 188, .2) 70%, rgba(48, 17, 94, .75) 100%);
+   mix-blend-mode: screen;
 }
 
 .filter--amaro::after {
-    background-image: -webkit-radial-gradient(circle, transparent 60%, rgba(51, 0, 102, 0.8));
-    background-image: radial-gradient(circle, transparent 60%, rgba(51, 0, 102, 0.8));
-    mix-blend-mode: color-burn;
-    opacity: 0.8;
-}
-
-.filter--amaro {
-    -webkit-filter: brightness(1) contrast(1.2);
-    filter: brightness(1) contrast(1.2);
+    background: radial-gradient(circle, rgba(177, 198, 244, .55) 35%, rgba(63, 26, 89, .75) 90%);
+    mix-blend-mode: soft-light;
 }
 
 /* WALDEN */
